mengganti paragraf pada index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col-sm-8 bg-jumbotron">
             <div class="mt-4 p-5 text-white rounded jumbotron">
                 <a href="presentTense.html"><h1>Simple Present Tense—How It’s Used, With Examples</h1></a>
-                <p>The simple present is a verb tense with two main uses. We use the simple present tense when an action is happening right now, or when it happens regularly (or unceasingly, which is why it’s sometimes called present indefinite). Depending on the person, the simple present tense is formed by using the root form or by adding –s or –es to the end.</p>
+                <p>The simple present is a verb tense with two main uses. We use the simple present tense when an action is happening right now, / when it happens regularly (or unceasingly, which is why it’s sometimes called present indefinite). Depending on the person, the simple present tense is formed by using the root form or by adding –s or –es to the end.</p>
             </div>
             <div class="mt-4 p-5 text-white rounded jumbotron">
                 <a href="futureTense.html"><h1>Simple Future Tense—How It’s Used, With Examples</h1></a>
